--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -5,54 +5,56 @@ metadata:
   name: cluster-secrets
   namespace: flux-system
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:JuESgj5IM00l8tk9,iv:pwU5RKEFOrAuOTPF45NgyT/nkzjwsu3rVTe4i++0Rv0=,tag:lh9YLHPPinbGQSbwD7bjmQ==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:8PSoOTPKwhqcFOEV,iv:TidUUOafGMy0IIaInDDChHsCYn+0beLCzLL3lGXrJKo=,tag:bUK9Bv5ymyDzzszMcRSNrA==,type:str]
+  SECRET_THANOS_S3_ACCESS_KEY: ENC[AES256_GCM,data:tvCj6SbBxP7IWBrQjPHAKv/pO6Y=,iv:L2uZ1aQtG+mr6K9rs5c6jWhtgzafkwptm3qetM1dhfY=,tag:so1eNGgWUjKpICkpiqYIsQ==,type:str]
+  SECRET_THANOS_S3_SECRET_KEY: ENC[AES256_GCM,data:XNLBo+WJKqqH2ybzzHCbDBEEVImg3UHfGFhy42t+uYxYe/SCxobmHg==,iv:ydrefXZMhQP6/FQpkVqNbZug40zRoUiJDNbxbh0cd1w=,tag:bTH9JmXX/PGfcDoUZmtg5Q==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-06-01T18:13:26Z"
-  mac: ENC[AES256_GCM,data:pFkz8osbeMoffduswJDG2ERhAS4DBpywFd+dzgtP1OEs2fAtB/ipav22AszFoig+asGng+CL/RAwb5aiuVztiFg9iIjdXXbn2K2ZQv4s+b0RGDcL8abIkSme0TTNaTh/mKWs1jX6NEXlX18XYbnlW36n60dsXnRxgglNlPZQ0Rk=,iv:AwBczIJ06L3g2DdQoJ3pU2U8r3dBbqS9qz7bF8e6DXs=,tag:IUMwqi0awa34RtUBHRYAHw==,type:str]
+  lastmodified: "2021-06-07T19:52:09Z"
+  mac: ENC[AES256_GCM,data:MOsRr9Siyncvsnbq1Bh7oqkqXNMfikPw5t7tTW4ZYO1DB5nVmIU1nEb+Sob7A0EwnPfIrFZpWFcj7OMwE3hzic07lKKNY8WeMvG1PdXSuT3TmqkVtPacRZrdQ4ZxXseaCUHe8EP7W5Rwl0JvrIF6+Y+rmkbhSPPJfpDTHRADIEk=,iv:h2plxE+904VtKyPwWaqp0vPsmpBn2cZixS0DKSSl0o4=,tag:h1jVuElFEHTFKfRzmPlMpg==,type:str]
   pgp:
-    - created_at: "2021-06-01T18:13:26Z"
+    - created_at: "2021-06-07T19:52:08Z"
       enc: |
         -----BEGIN PGP MESSAGE-----
 
-        hQIMA8oSIqtHvng8AQ/8DBBzWgGFgmXxZv+k0Jcx2pkNtN1gO+Wf0Gk9RY/ryqqW
-        szPFHwicAyfq/fMhnmRDd5+JIR0Gt52+mWwlgvlXEkHkOiDvn4bbjVLmeGzDvTXk
-        cZleeLTPIXrnv8X5JdqHWb0ikpq5vFtr6Fpfvt6Lno1H+E9gBhzRuNIzgNf3G4HB
-        cjEZzNricQmf/K93RfEBZhkdjSbo5oPawdXyLNpzMiBk1P1AjZBpVAeCVe7AIBzN
-        vK+qQoHh4CP8KOXiMTWn2G9TWQwDDcpU9RaG2gAm/8htat33vLVfkRuKFC9SKUJY
-        KM4AreEczSW9g2tZEKgUr0Bh1lM2HjAep/TmlKInR3+LBV6PSNrQO9L5DV6arcJx
-        Mw8pYnYj3tDMoRmPfHv1Mjy5wIJJ1IEsjFM1k1zmWdoWB10BE/guWkDQkwxh4CNL
-        C2m8Q5CksqlIzyi78vYxPYgkSVnDNZX5vm3b2EjRd67Jw1B5Br6hDmbfoNimSbDB
-        PwTDWncKtONSyrolTbSxAXHAd8TY11QMxxmjq0+ydrWaU4DSnv1T/2XpOYWopTqB
-        14uye7CnLMzOrtDX2bQHM7oGo6AWDniqBdAlyjTZi8lVPYl2/RPlrJ/kIOVFQCWJ
-        uMJR86B+ukuAaDTuK9R/j+DWPYfF6zw2njrP51yR00ilJSZxNgJYDr1c8jCkjnzS
-        XgF3+H65HCVrLoOYbo6cd2VJZZhSx4Y1bQ2RKzRI8OV01YKfYOfttEpEJDp56Ajr
-        7XFPalyxZCmG9Kq3Urtosb7yvgNoBVqM3Cij64O6zdh/RDkR6rPmEGtYK+pBZ5Y=
-        =Rdyv
+        hQIMA8oSIqtHvng8ARAAl2+3X+NFy9ArG46ERcKbB7cLy67bP8odIlcpnp0clcvH
+        xwVrKVPgmsiZXgj2j11L7693ndncYVwyL1LoSmcwEFKYNEwIwvc8PogeKaeZgGrE
+        78ldfw4fEG/hhXM3Y2XIA/NfvMJVclksd++9fXik72v1tctd9f9qwBQ0b1UgUeY7
+        A0W0a2PesiLwaB6XYCmICRQtFi84FlbclytssbBJurURnijoAmqXhN8HNMfOtMXV
+        azLDV/6Teh8fLBkUD5VfzSfZAGp1X0Dgl72P6uVO43DcTpRmZQTx8EWChfjFDuCE
+        uObpXsNT2srOaesR22rPwtc97CoZY2owTH9vyHZdHe2Kisr9O7W4F+HDxk7rPF8u
+        cIaTG7i9mhh6kfSPAF6Spj5qU5ezh9beTKqND6Vtb4xGxGBPfaIS6EAjFSiyZwOO
+        p2twcpukR0Bv1jSVpAXKG/bzBsLj+szpQGHj8pTQpjhWGy+4/6W+ePb/3qRLwD+t
+        2DetGwNz0qEueJZqQvvjYdMGM9aH/GrH8vXGSKoyUA4y4oszEDGbirEaMqZWYuR2
+        QoBif5320OCaoCm6jshIYdzo2NCPZpixRX2K9NMUl5nDX6MZDhZQ7mkEA5SFBJrz
+        MZLJj7M4ax4DEYyierFbI+P3Wn4sGHuC9rijzFCl8ochmzMCYlcj24SvIyZF0ezS
+        XgGuQfyaH7Za6rgZ6ExndlkrzWMTrGRiDuu6+HN+sZOUKa6TALdBBcTrHE4g8QGw
+        NyI2iKr1P59pOIZQu209NnyXqADLroKfjf6YyjIefNjR4FSQvEZoaZN8Bco21rc=
+        =uAOS
         -----END PGP MESSAGE-----
       fp: DA8002060402EC39B195451D5CED80362B5A4EF2
-    - created_at: "2021-06-01T18:13:26Z"
+    - created_at: "2021-06-07T19:52:08Z"
       enc: |
         -----BEGIN PGP MESSAGE-----
 
-        hQIMA8ORz3KkY6O4AQ//S9DlizMCJptYQCrzFCLRm9Ohr6fHLQA7NzLTWToM3Sff
-        tBwfmhOzYOMxts5SrghMrWuXVpQWme1NqbX70UM/c+gTGdkEgYByW1j/rifE4QK/
-        gdc1OOjZChE40S/F88BnWkVojKbk9m9kS5/z+eBLODs0TC8Wa3lw+NjzanLWw0wc
-        0mQ5Nc/DmpfK0W7cEmNVzvKbZ200vwSbmGIy5ncXg8M8xsSUrZJ+EJvCx1LyYdvW
-        3zJ0Ugagsz6YqiudnnRlAq7MI0Kf0lTK1mgusUzFW5y4oSD/s3A0RtyJgMdM007a
-        ozIy35kJ8KmUVmNSmwFuabQjaHE9rJxpOE8Xp9Nx71ehS6v9/Ya//Uqtz9j8GVGi
-        w+OhQoMH91TxA+d0gLEvZsUNyovVQ61Kl3WKQROJypG0xQkWLIO2/ref5hAcL/yW
-        WEGWnMbodO4ig8Rw2yo50JCRdtHIOtPUP0WVVr0ukwKeayselvvkzyy5ctLsb60d
-        gqZubD+Fi3ztx09OXfu+dntNsQHcVY3VjMpHVqciVUcFCF68+Xgn2oblluapjEAn
-        MiSQo5dMUIIkc38blCa6WrEOZqnqYm8FKx3K5nDFWrhBhn3GC4H1g0x9jHf8GVv/
-        Wvzl1Z1DnKz16juhlgD+7FbyXar5ayJsN82E9XQE8WpaZ2pXFGGicr3gVS1wg4LS
-        XgGsg2rqnpjfeFqha09FYDxxmJMeZGlnJVrKoSLv2sIV2VqxZfdpgaX26WT2k4fT
-        mbk6T5FG7+aJs8TPpRCV1NYOIabVpQkd62C80CWazp4Vc3QXtDvT02iTvR/FbX0=
-        =LVAG
+        hQIMA8ORz3KkY6O4AQ//QrIePCfoVB3g9eQP8Hobfe6AYLoh/V26+REi7Fv9gxul
+        NtQbTVNRKIXrO3aUONMUZEk8toinqSxW/3i4p4iMhgYapl4L7weJCb580HlU6+ZU
+        +7Phxn+KmNjQZL6G74RYdwv2pKTdmTcVyZtnFJ8GJANRGu6gxaEy8WLAVjCc/L20
+        EwC1ERHwkU0R+qZKSH/RWgNDEKtFoNOvYIpDRi4ynQvc65Uspd9qizZXsUIhbxx/
+        WNimgxgcEHcFafABMhPOhAsc/Me40cG6Nx7v9aSCwFcwIUTvSROXUPmwOlFgiaEB
+        IQ6gGd0qyXxfoBub5Zm1Olz/T82n0gxoLAnO3NmzXajroB+AN+eoYcu7Ek4YdZPh
+        gvGzIndc54qfY+HZdtOpbdr3gQWvXKBNU2SzZJ34PZKH4t81Qc532XM1swueViIK
+        Subfi+ea6kTxTrdpADIGBAT+poxTCGZegtzsOQgANb+OXxz/3qUE8FPtEiw4fm2A
+        l+Y3LA7rjjWfUNhUQBOqwZZqNzQtXVA7IfUFrpHuvR4G5Q40wWQ1h/qQeXAEoef6
+        gEyj0MTBi54cz7YfLNN1to4XEGLVMCnN57Gk85ZhW/tGLOSBQUz6R207hqZwzMLi
+        sm7IwQ2TUD7nD5aUjOTxM2yz7jXs1itPpgloHWF7Vhw9jxx+ywjJw7erC7Ev4+fS
+        XgGFxIO08uKxooxJk57RozWSHATvLXtPG79+Ox9XK9Bv+6GSfQi62aV22PSYh40K
+        qmlQO9Uk6J2u+KFaxcS4IOM4FiGlNv0Lp8usVqn62zoaTX3dRfDAar28auA/0v4=
+        =mzX7
         -----END PGP MESSAGE-----
       fp: 76DAFEBE0E21604BB9F2D6C11850C928A0D756C8
   encrypted_regex: ^(data|stringData)$
