--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -5,56 +5,58 @@ metadata:
   name: cluster-secrets
   namespace: flux-system
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:8PSoOTPKwhqcFOEV,iv:TidUUOafGMy0IIaInDDChHsCYn+0beLCzLL3lGXrJKo=,tag:bUK9Bv5ymyDzzszMcRSNrA==,type:str]
-  SECRET_THANOS_S3_ACCESS_KEY: ENC[AES256_GCM,data:tvCj6SbBxP7IWBrQjPHAKv/pO6Y=,iv:L2uZ1aQtG+mr6K9rs5c6jWhtgzafkwptm3qetM1dhfY=,tag:so1eNGgWUjKpICkpiqYIsQ==,type:str]
-  SECRET_THANOS_S3_SECRET_KEY: ENC[AES256_GCM,data:XNLBo+WJKqqH2ybzzHCbDBEEVImg3UHfGFhy42t+uYxYe/SCxobmHg==,iv:ydrefXZMhQP6/FQpkVqNbZug40zRoUiJDNbxbh0cd1w=,tag:bTH9JmXX/PGfcDoUZmtg5Q==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:IbIkopo+lN/fm2ku,iv:knTQ23mATPkvWOCBGrBhQMMGVwhTnUTAqw7FCeLMTUM=,tag:a8eI5GIM/Z8uQ0mPrOfXrA==,type:str]
+  SECRET_THANOS_S3_ACCESS_KEY: ENC[AES256_GCM,data:h7spwqeYs5F7AeqwjF3gdLZjwrY=,iv:llaU13g4zHpf94msjgPOdQT4ZN4BRKWhyZoYoeclMNs=,tag:aHTdXVlfqQkMmNZ9C76Rlw==,type:str]
+  SECRET_THANOS_S3_SECRET_KEY: ENC[AES256_GCM,data:76mRL99uTmm4UH6thq5z/fKrabrBTDBZqqcxfuxiTQsil0GBhZJv8w==,iv:+a1+uq8EVRCVJJCTMnsx+Vhg8MQuBz1Lf5Cc0HJx1J8=,tag:b4viwYNBWCq/puDgZBMS3Q==,type:str]
+  SECRET_LOKI_S3_ACCESS_KEY: ENC[AES256_GCM,data:ydED3/MEiRxVqFVra1DiErfRTng=,iv:1pmKZJog2EctwoAnYOmDhgbnvtgsRBcDycKJmFzV8O0=,tag:/1YYndjujjbl2ygHHEt+Dg==,type:str]
+  SECRET_LOKI_S3_SECRET_KEY: ENC[AES256_GCM,data:+V07u4rHgwa7ouHfYay/x50pcoT2BfAQ64096GZ5BizqOx97rKHy3w==,iv:TaB3X+sQVxHk1PvQmpRpXvEhDomGFvd7Zwy9n2+tcvM=,tag:mbXRPJkE5h/beAzWdXR6LQ==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-06-07T19:52:09Z"
-  mac: ENC[AES256_GCM,data:MOsRr9Siyncvsnbq1Bh7oqkqXNMfikPw5t7tTW4ZYO1DB5nVmIU1nEb+Sob7A0EwnPfIrFZpWFcj7OMwE3hzic07lKKNY8WeMvG1PdXSuT3TmqkVtPacRZrdQ4ZxXseaCUHe8EP7W5Rwl0JvrIF6+Y+rmkbhSPPJfpDTHRADIEk=,iv:h2plxE+904VtKyPwWaqp0vPsmpBn2cZixS0DKSSl0o4=,tag:h1jVuElFEHTFKfRzmPlMpg==,type:str]
+  lastmodified: "2021-06-07T20:35:42Z"
+  mac: ENC[AES256_GCM,data:RF5sKwaxtZHAQX9gavPijHzDeyOty3nDDyKvfcFRIDUP+R2UeyzYjeXdSjeV/LF/Ivuqun9rprHuraEcmB2Yw/zfku5QofPLlnb/352hWSOBeYRhhQPq0X05JfurfKaJXFcBPtLsL+Yukgjn3wooVN2AE1dgz4xaloIoBr8iwZI=,iv:GojeziI6AnRXhkmesymkyDNuWk7acVxNRT4zhX+u9qk=,tag:0rF0QynIXpZv//GGKKnYiw==,type:str]
   pgp:
-    - created_at: "2021-06-07T19:52:08Z"
+    - created_at: "2021-06-07T20:35:42Z"
       enc: |
         -----BEGIN PGP MESSAGE-----
 
-        hQIMA8oSIqtHvng8ARAAl2+3X+NFy9ArG46ERcKbB7cLy67bP8odIlcpnp0clcvH
-        xwVrKVPgmsiZXgj2j11L7693ndncYVwyL1LoSmcwEFKYNEwIwvc8PogeKaeZgGrE
-        78ldfw4fEG/hhXM3Y2XIA/NfvMJVclksd++9fXik72v1tctd9f9qwBQ0b1UgUeY7
-        A0W0a2PesiLwaB6XYCmICRQtFi84FlbclytssbBJurURnijoAmqXhN8HNMfOtMXV
-        azLDV/6Teh8fLBkUD5VfzSfZAGp1X0Dgl72P6uVO43DcTpRmZQTx8EWChfjFDuCE
-        uObpXsNT2srOaesR22rPwtc97CoZY2owTH9vyHZdHe2Kisr9O7W4F+HDxk7rPF8u
-        cIaTG7i9mhh6kfSPAF6Spj5qU5ezh9beTKqND6Vtb4xGxGBPfaIS6EAjFSiyZwOO
-        p2twcpukR0Bv1jSVpAXKG/bzBsLj+szpQGHj8pTQpjhWGy+4/6W+ePb/3qRLwD+t
-        2DetGwNz0qEueJZqQvvjYdMGM9aH/GrH8vXGSKoyUA4y4oszEDGbirEaMqZWYuR2
-        QoBif5320OCaoCm6jshIYdzo2NCPZpixRX2K9NMUl5nDX6MZDhZQ7mkEA5SFBJrz
-        MZLJj7M4ax4DEYyierFbI+P3Wn4sGHuC9rijzFCl8ochmzMCYlcj24SvIyZF0ezS
-        XgGuQfyaH7Za6rgZ6ExndlkrzWMTrGRiDuu6+HN+sZOUKa6TALdBBcTrHE4g8QGw
-        NyI2iKr1P59pOIZQu209NnyXqADLroKfjf6YyjIefNjR4FSQvEZoaZN8Bco21rc=
-        =uAOS
+        hQIMA8oSIqtHvng8ARAAnDZhHypHs/NaaiwBzayNiuX8f0uB3In7KyK/GaGA44sF
+        Mnyrm7VKlp1Cs/gbMg4NUcca7BgUpPWpVXxCfnQCMCu7ibw/CvArjfcmmmjqXfiA
+        SHXTg87INzog/CFXA/YAdj2KRUfdu0s7y8+jlfIVslHYoMmWVLmNq1OdOsovNxVM
+        wLh6pfLAUXg4tLVPUvrFHXnOlnEjearcvfifEV9opL0Ma/Ks5RtRC+TT/KaMxoDb
+        pX+i2w6+yVdvUrzdMHokgqtaeBfz7hjZIBqtAkcztwf0s5TjrtYEuW5D5ZDI/UUz
+        FHkhs5jmS6znVdyU9EAFwyrubNS5UClwEwiAnEt76x10UxjRPbvfR+unwasesAKm
+        xFufA4zxUxebg6WuoNW8nBfw1SFygwI7h6ZjR+mPO/+bMAQrBvtCKBB3jC/A8xWJ
+        lMmHrHbgPNbHgoCyVjY4wO4SlR3hv2ca+PiIEBxxC0hDVqWltkCKOllcJnSAanMT
+        DimXYVV6lX+zd1hSuGqd4nrt5YkPed1VsTvSOz967lUzxN6TlnJpr5suKlbJREfl
+        MQGOdMJGLc0DMibIeCxOkzotPhti1hooCwr+aBION2W5I7s+RlB1MwDJfLa5YUKe
+        PdgZaKq0tRPOLEObRFPjq6oXMaXIiibNmyRi97ETMa6Q75/fbgiuPT6vLONyCOrS
+        XgEP5l8i7ZR0ZmOYO3xzWCHra1MbI0OBVCKRxwQBGr/IWPMHppRHRhFF2iN1bFU4
+        ISrrYlANjzxpUcI+XCs7uhFkHWI55of5DJ++lTAUFIVqZGlXkTLReR/3pQ16SN8=
+        =LHcq
         -----END PGP MESSAGE-----
       fp: DA8002060402EC39B195451D5CED80362B5A4EF2
-    - created_at: "2021-06-07T19:52:08Z"
+    - created_at: "2021-06-07T20:35:42Z"
       enc: |
         -----BEGIN PGP MESSAGE-----
 
-        hQIMA8ORz3KkY6O4AQ//QrIePCfoVB3g9eQP8Hobfe6AYLoh/V26+REi7Fv9gxul
-        NtQbTVNRKIXrO3aUONMUZEk8toinqSxW/3i4p4iMhgYapl4L7weJCb580HlU6+ZU
-        +7Phxn+KmNjQZL6G74RYdwv2pKTdmTcVyZtnFJ8GJANRGu6gxaEy8WLAVjCc/L20
-        EwC1ERHwkU0R+qZKSH/RWgNDEKtFoNOvYIpDRi4ynQvc65Uspd9qizZXsUIhbxx/
-        WNimgxgcEHcFafABMhPOhAsc/Me40cG6Nx7v9aSCwFcwIUTvSROXUPmwOlFgiaEB
-        IQ6gGd0qyXxfoBub5Zm1Olz/T82n0gxoLAnO3NmzXajroB+AN+eoYcu7Ek4YdZPh
-        gvGzIndc54qfY+HZdtOpbdr3gQWvXKBNU2SzZJ34PZKH4t81Qc532XM1swueViIK
-        Subfi+ea6kTxTrdpADIGBAT+poxTCGZegtzsOQgANb+OXxz/3qUE8FPtEiw4fm2A
-        l+Y3LA7rjjWfUNhUQBOqwZZqNzQtXVA7IfUFrpHuvR4G5Q40wWQ1h/qQeXAEoef6
-        gEyj0MTBi54cz7YfLNN1to4XEGLVMCnN57Gk85ZhW/tGLOSBQUz6R207hqZwzMLi
-        sm7IwQ2TUD7nD5aUjOTxM2yz7jXs1itPpgloHWF7Vhw9jxx+ywjJw7erC7Ev4+fS
-        XgGFxIO08uKxooxJk57RozWSHATvLXtPG79+Ox9XK9Bv+6GSfQi62aV22PSYh40K
-        qmlQO9Uk6J2u+KFaxcS4IOM4FiGlNv0Lp8usVqn62zoaTX3dRfDAar28auA/0v4=
-        =mzX7
+        hQIMA8ORz3KkY6O4AQ/+NJ6aSi2Wx1ztH7OKGbAMEGssDKoM4j0nLcrOU81fLaPP
+        CLXveMlRD7Rhfx9a+2amRRuLDHeFyBDphpLt3y2fvSeTlt5jq71Rqf5NK88TwywH
+        lJvXzIL0Pby4txKnKvyYy8k0DwJ2ITJSuUeY1xf6FtQQKsrSqjBISWOuIhJS+H6B
+        sj/+6PhlXlysui3+C0PkKCbk07k8DtOPJBB9tt5q9LnkUdJwbisMaFjQ9+4YzTDx
+        0R9CGrlUsZggqwCqs3M0QUgsK9lNRy83bRuBmv28BHoG7khJU6IdPtPrpjv02AIW
+        bIIVLJ343ncCR3c5l24N7df/c63sStpMpmhZoWIAbs6EMWklLA0qB5Sqdhgcrd9o
+        mCG6Nf7fEGBr02mZyuKKagkq4dckbIlgK/RCDx4fcHxfEHw8mJ62YSSbGAyFHsqf
+        cr6vIE0QyQ1p2RVauinwpoAgwr0zyfsoLWvgvPw9M7gHM8G3mLdvgV7rSrpA1+gJ
+        aKS1AIR8dqX17qm7FdN2qYlbyzRTNpOGyCdIbS56tRZgmsoLqMYnrlROAnZDz4DK
+        SoHC5mDbbdE94LDV7ybmjdsM2TahervID/EGRoSmg5nhqphP288+b8DoapjfavN5
+        7+weygs7bpfFtytm53SPgcHormHXg7W0VUu/S/AhH4M0msCB2mH5YJaCUUA0dpDS
+        XgFwEoLx3GEaQVc1cQm9l7UJJQxSzmcMXvskdg/90rG2PEqrV2ywyZ5ZSLd84Ykx
+        AMYHKp8a1dQdxg5Xk+OeiwZR9AVhclxexQCNgoEHkVo5RtfHpIDtYGPhneEeqxs=
+        =pDSh
         -----END PGP MESSAGE-----
       fp: 76DAFEBE0E21604BB9F2D6C11850C928A0D756C8
   encrypted_regex: ^(data|stringData)$
