--- a/cluster/base/flux-system/gotk-components.yaml
+++ b/cluster/base/flux-system/gotk-components.yaml
@@ -1,5 +1,5 @@
 ---
-# Flux version: v0.16.0
+# Flux version: v0.15.3
 # Components: source-controller,kustomize-controller,helm-controller,notification-controller
 apiVersion: v1
 kind: Namespace
@@ -7,7 +7,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.16.0
+    app.kubernetes.io/version: v0.15.3
   name: flux-system
 ---
 apiVersion: apiextensions.k8s.io/v1
@@ -19,7 +19,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.16.0
+    app.kubernetes.io/version: v0.15.3
   name: alerts.notification.toolkit.fluxcd.io
 spec:
   group: notification.toolkit.fluxcd.io
@@ -229,7 +229,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.16.0
+    app.kubernetes.io/version: v0.15.3
   name: buckets.source.toolkit.fluxcd.io
 spec:
   group: source.toolkit.fluxcd.io
@@ -459,7 +459,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.16.0
+    app.kubernetes.io/version: v0.15.3
   name: gitrepositories.source.toolkit.fluxcd.io
 spec:
   group: source.toolkit.fluxcd.io
@@ -790,7 +790,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.16.0
+    app.kubernetes.io/version: v0.15.3
   name: helmcharts.source.toolkit.fluxcd.io
 spec:
   group: source.toolkit.fluxcd.io
@@ -1035,7 +1035,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.16.0
+    app.kubernetes.io/version: v0.15.3
   name: helmreleases.helm.toolkit.fluxcd.io
 spec:
   group: helm.toolkit.fluxcd.io
@@ -1783,7 +1783,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.16.0
+    app.kubernetes.io/version: v0.15.3
   name: helmrepositories.source.toolkit.fluxcd.io
 spec:
   group: source.toolkit.fluxcd.io
@@ -2001,7 +2001,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.16.0
+    app.kubernetes.io/version: v0.15.3
   name: kustomizations.kustomize.toolkit.fluxcd.io
 spec:
   group: kustomize.toolkit.fluxcd.io
@@ -2167,9 +2167,8 @@ spec:
                     type: object
                 type: object
               patches:
-                description: Strategic merge and JSON patches, defined as inline YAML
-                  objects, capable of targeting objects based on kind, label and annotation
-                  selectors.
+                description: Patches (also called overlays), defined as inline YAML
+                  objects.
                 items:
                   description: Patch contains either a StrategicMerge or a JSON6902
                     patch, either a file or inline, and the target the patch should
@@ -2550,7 +2549,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.16.0
+    app.kubernetes.io/version: v0.15.3
   name: providers.notification.toolkit.fluxcd.io
 spec:
   group: notification.toolkit.fluxcd.io
@@ -2739,7 +2738,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.16.0
+    app.kubernetes.io/version: v0.15.3
   name: receivers.notification.toolkit.fluxcd.io
 spec:
   group: notification.toolkit.fluxcd.io
@@ -2954,7 +2953,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.16.0
+    app.kubernetes.io/version: v0.15.3
   name: helm-controller
   namespace: flux-system
 ---
@@ -2964,7 +2963,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.16.0
+    app.kubernetes.io/version: v0.15.3
   name: kustomize-controller
   namespace: flux-system
 ---
@@ -2974,7 +2973,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.16.0
+    app.kubernetes.io/version: v0.15.3
   name: notification-controller
   namespace: flux-system
 ---
@@ -2984,7 +2983,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.16.0
+    app.kubernetes.io/version: v0.15.3
   name: source-controller
   namespace: flux-system
 ---
@@ -2994,7 +2993,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.16.0
+    app.kubernetes.io/version: v0.15.3
   name: crd-controller-flux-system
 rules:
 - apiGroups:
@@ -3074,7 +3073,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.16.0
+    app.kubernetes.io/version: v0.15.3
   name: cluster-reconciler-flux-system
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -3094,7 +3093,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.16.0
+    app.kubernetes.io/version: v0.15.3
   name: crd-controller-flux-system
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -3126,7 +3125,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.16.0
+    app.kubernetes.io/version: v0.15.3
     control-plane: controller
   name: notification-controller
   namespace: flux-system
@@ -3146,7 +3145,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.16.0
+    app.kubernetes.io/version: v0.15.3
     control-plane: controller
   name: source-controller
   namespace: flux-system
@@ -3166,7 +3165,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.16.0
+    app.kubernetes.io/version: v0.15.3
     control-plane: controller
   name: webhook-receiver
   namespace: flux-system
@@ -3186,7 +3185,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.16.0
+    app.kubernetes.io/version: v0.15.3
     control-plane: controller
   name: helm-controller
   namespace: flux-system
@@ -3259,7 +3258,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.16.0
+    app.kubernetes.io/version: v0.15.3
     control-plane: controller
   name: kustomize-controller
   namespace: flux-system
@@ -3288,7 +3287,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: ghcr.io/fluxcd/kustomize-controller:v0.13.1
+        image: ghcr.io/fluxcd/kustomize-controller:v0.13.0
         imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
@@ -3334,7 +3333,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.16.0
+    app.kubernetes.io/version: v0.15.3
     control-plane: controller
   name: notification-controller
   namespace: flux-system
@@ -3410,7 +3409,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     app.kubernetes.io/part-of: flux
-    app.kubernetes.io/version: v0.16.0
+    app.kubernetes.io/version: v0.15.3
     control-plane: controller
   name: source-controller
   namespace: flux-system
@@ -3443,7 +3442,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: ghcr.io/fluxcd/source-controller:v0.15.3
+        image: ghcr.io/fluxcd/source-controller:v0.15.2
         imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
