--- a/cluster/apps/network/traefik/helm-release.yaml
+++ b/cluster/apps/network/traefik/helm-release.yaml
@@ -74,18 +74,16 @@ spec:
     experimental:
       plugins:
         enabled: true
-    affinity:
-      podAntiAffinity:
-        preferredDuringSchedulingIgnoredDuringExecution:
-          - weight: 100
-            podAffinityTerm:
-              labelSelector:
-                matchExpressions:
-                  - key: app.kubernetes.io/name
-                    operator: In
-                    values:
-                      - traefik
-              topologyKey: kubernetes.io/hostname
+    # affinity:
+    #   podAntiAffinity:
+    #     requiredDuringSchedulingIgnoredDuringExecution:
+    #     - labelSelector:
+    #         matchExpressions:
+    #         - key: app.kubernetes.io/name
+    #           operator: In
+    #           values:
+    #           - traefik
+    #       topologyKey: kubernetes.io/hostname
     resources:
       requests:
         memory: 100Mi
