--- a/cluster/apps/security/authentik/helm-release.yaml
+++ b/cluster/apps/security/authentik/helm-release.yaml
@@ -17,10 +17,9 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
-    # image:
-    #   name: ghcr.io/goauthentik/server
-    #   tag: 2021.5.2
-    #   pullPolicy: IfNotPresent
+    image:
+      repository: ghcr.io/goauthentik/server
+      tag: 2021.7.1
 
     ingress:
       enabled: true
